--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laracasts/flash": "^2.0",
         "laravel/framework": "5.3.*",
+        "laravel/socialite": "~2.0",
         "laravelcollective/html": "^5.3.0"
     },
     "require-dev": {
